--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
     "description": "Simple BOM rain radar gif generator.",
     "require": {
         "intervention/image": "^2.4",
-        "php": "^7.0"
+        "php": "^7.0",
+        "ext-gd": "*",
+        "ext-mbstring": "*"
     }
 }
